# F1tenth_CDC

./: README.md
src/adaptive_pure_pursuit/: 10thdec1.csv  CMakeLists.txt  final_test.csv  package.xml  timed.csv  timed1.pgm  timed1.yaml
src/adaptive_pure_pursuit/config/: control_params.yaml
src/adaptive_pure_pursuit/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/adaptive_pure_pursuit/launch/: adaptive_pure_pursuit.launch.py
src/adaptive_pure_pursuit/log/: latest_build
src/adaptive_pure_pursuit/src/: .adaptive_pure_pursuit_node.cpp.swp  adaptive_pure_pursuit_node.cpp  adaptive_pure_pursuit_node_v2.cpp  ftg.cpp  mux_control_head.cpp  obs_det.cpp  raceline_momo.csv
src/f1tenth_system/f1tenth_stack/: setup.py
src/f1tenth_system/f1tenth_stack/f1tenth_stack/: .alpp.py.swg  .alpp.py.swh  .alpp.py.swi  .alpp.py.swj  .alpp.py.swk  .alpp.py.swl  .alpp.py.swm  .alpp.py.swo  .ftg_ema.py.swo  alpp.py  drop.py  ftg_ema.py  ftg_ema_old.py  gap_follower.py  mux.py  mux_bkp.py  obstacle_tester.py  obstacle_tester.py.save  raceline.py  tmux.py
src/f1tenth_system/f1tenth_stack/launch/: bringup_launch.py
src/f1tenth_system/f1tenth_stack/track/: cool.csv  final_ok.csv  moded.csv  test1_center_modeed.csv  test1_rcl.csv  track_changer.py  updated_points.csv
src/f1tenth_system/vesc/vesc_ackermann/src/: vesc_to_odom.cpp  vesc_to_odom_copy.cpp
src/ugv02_cartographer/: CMakeLists.txt  package.xml
src/ugv02_cartographer/config/: .localization.lua.swo  .localization.lua.swp  localization.lua  localization_realtime.lua  localization_working.lua  only_scan.lua  scan_imu.lua
src/ugv02_cartographer/launch/: localization.launch.py  only_scan.launch.py  scan_imu.launch.py
src/ugv02_cartographer/src/: odom_publisher_node.cpp
